# CustomViews

./: settings.gradle.kts
ImageFilter/: build.gradle.kts
ImageFilter/src/main/cpp/: CMakeLists.txt  imagefilter.cpp
ImageFilter/src/main/java/com/sqsong/imagefilter/: ImageProcessor.kt  NativeLib.kt
ImageFilter/src/test/java/com/sqsong/imagefilter/: ExampleUnitTest.kt
OpenGLLib/: build.gradle.kts
OpenGLLib/src/main/: AndroidManifest.xml
OpenGLLib/src/main/assets/shader/: base_filter_ver.vert  brightness_filter_frag.frag  clarity_filter_frag.frag  color_temperature_filter_frag.frag  contrast_filter_frag.frag  exposure_filter_frag.frag  filter_lut_amelia.glsl  filter_lut_ava.glsl  filter_lut_emily.glsl  frag_beauty_microdermabrasion.glsl  frag_bounce.glsl  frag_butterfly_wave_scrawler.glsl  frag_cross_warp.glsl  frag_cube.glsl  frag_doorway.glsl  frag_flyeye.glsl  frag_glitch_memories.glsl  frag_grid_flip.glsl  frag_hexagonalize.glsl  frag_highlight_shadow.glsl  frag_inverted_page_curl.glsl  frag_light_on.glsl  frag_linear_blur.glsl  frag_mosaic.glsl  frag_perlin.glsl  frag_polka_dots_curtain.glsl  frag_squareswire.glsl  frag_stereo_viewer.glsl  frag_swap.glsl  frag_swirl.glsl  frag_temperature_tint.glsl  frag_template.glsl  frag_undulating_burn_out.glsl  frag_water_drop.glsl  frag_windowbinds.glsl  fragment_shader_lut_es2.glsl  gaussian_blur_filter_frag.frag  hexagon_mosaic_frag.frag  highlight_filter_frag.frag  lut_filter_frag.frag  (+10 more)
OpenGLLib/src/main/java/com/sqsong/opengllib/: GLTextureView.java  MultiTextureGLSurface.kt  MultiTextureGLSurfaceView.kt  MultiTextureRender.kt  OpenGLRender.kt  OpenGLSurfaceView.kt  OpenGLTextureView.kt
OpenGLProcessor/: build.gradle.kts
PhotoView/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/audio/: music_desert_island.aac
app/src/main/assets/collage/: resources.xml
app/src/main/assets/collage/solutions/joins/: join_00.xml  join_01.xml  join_02.xml  join_03.xml  join_04.xml  join_05.xml  join_06.xml  join_vertical.xml
app/src/main/assets/collage/solutions/mosaics/: mosaic_00.xml
app/src/main/assets/collage/solutions/posters/: poster_00.xml  poster_01.xml  poster_02.xml  poster_03.xml  poster_04.xml  poster_05.xml  poster_06.xml  poster_07.xml  poster_08.xml  poster_09.xml  poster_10.xml  poster_11.xml  poster_12.xml  poster_13.xml  poster_14.xml  poster_15.xml  poster_16.xml  poster_17.xml  poster_18.xml  poster_19.xml  poster_20.xml  poster_21.xml  poster_22.xml  poster_23.xml  poster_24.xml  poster_25.xml  poster_26.xml  poster_27.xml  poster_28.xml  poster_29.xml  poster_30.xml  poster_31.xml  poster_32.xml  poster_33.xml  poster_34.xml  poster_35.xml  poster_36.xml  poster_37.xml
app/src/main/assets/collage/solutions/templates/: template_00.xml  template_01.xml  template_02.xml  template_03.xml  template_04.xml  template_05.xml  template_06.xml  template_07.xml  template_08.xml  template_09.xml  template_10.xml  template_11.xml  template_12.xml  template_13.xml  template_14.xml  (+20 more)
app/src/main/res/color/: color_action_menu_text.xml  color_crop_mode_text.xml  color_cutout_radio.xml  color_icon_enable_state.xml  color_image_placeholder.xml  color_menu_icon.xml  color_polygon_menu.xml  color_ripple_on_primary.xml  color_surface_container_placeholder.xml  color_surface_gradient.xml  color_surface_variant.xml  color_undo_redo.xml  color_video_volume.xml  color_watermark_setting_text.xml
app/src/main/res/drawable/: cutout_ic_brush.xml  cutout_ic_lasso.xml  cutout_ic_polygon.xml  cutout_ic_rectangle.xml  cutout_ic_reset.xml  ic_add_image.xml  ic_adjustment_brightness.xml  ic_adjustment_contrast.xml  ic_adjustment_exposure.xml  ic_adjustment_highlights.xml  ic_adjustment_saturation.xml  ic_adjustment_shadow.xml  ic_adjustment_sharpen.xml  ic_adjustment_temperature.xml  ic_adjustment_vignette.xml  ic_compare.xml  ic_crop_rotate.xml  ic_erase.xml  ic_fingerprint_bold.xml  ic_lock_emoji.xml  ic_redo.xml  ic_restore.xml  ic_star_big.xml  ic_star_small.xml  ic_undo.xml  ripple_circle_40dp.xml  ripple_on_surface_rounded.xml  ripple_rounded_8dp.xml
app/src/main/res/layout/: activity_adjust_shadow.xml  activity_blur_image.xml  activity_college_sample.xml  activity_color_panel.xml  activity_download_font_sample.xml  activity_gif_maker.xml  activity_gltransition.xml  activity_image_filter.xml  activity_image_filter2.xml  activity_image_light_on.xml  activity_image_lut.xml  activity_image_outline.xml  activity_lutfilter.xml  activity_main.xml  activity_manual_cutout.xml  activity_mosaic.xml  activity_open_glfilter.xml  activity_open_glimage_video_filter.xml  activity_open_glprocessor.xml  activity_open_glsample.xml  activity_open_glvideo_record.xml  activity_pattern_lock.xml  activity_ruler_sample.xml  activity_scable_image_view.xml  activity_scale_canvas.xml  activity_set_pin_pattern.xml  activity_swap_face_result.xml  activity_turntable.xml  activity_video_transformer.xml  activity_watermark_material.xml  item_collage_preview.xml  item_font_sample.xml  item_lut.xml  item_lut_preview.xml  item_photo_adjustment.xml  item_ruler_sample.xml  layout_photo_adjust.xml  layout_test.xml
app/src/main/res/menu/: menu_crop.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  family_names.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
lib-native-cutout/: build.gradle
lib-native-cutout/src/main/: AndroidManifest.xml
lib-native-cutout/src/main/cpp/: CMakeLists.txt  ImageProcessing.cpp  LibAlpha.cpp  beauty.h  enhance_foreground.h  libnative.cpp  photo_processing.c
lib-native-cutout/src/main/res/raw/: frag_beauty.glsl  frag_no_filter.glsl  frag_saturation.glsl  frag_smooth.glsl  fragment_brightness.glsl  vertex_no_filter.glsl
(+194 files in other folders)
